syntax = "proto3";

package grpc_comm;

// Parameter definition - simplified as dictionary structure

// Single parameter value - supports different types
message Parameter {
  string key = 1;
  oneof value {
    float float_value = 2;
    int32 int_value = 3;
    string string_value = 4;
    bool bool_value = 5;
  }
}

// Motion definition - unified motion representation

message Motion {
  string motion_id = 1;              // unique motion identifier
  repeated Parameter parameters = 2; // parameters with default or override values
}

// Get motion list definition

// Response for getting available motion list
message GetMotionsResponse {
  repeated Motion motions = 1;            // available motion list with default parameters
  map<string, string> descriptions = 2;   // motion_id -> description text
  bool success = 3;
  string message = 4;
}

// Request for getting available motion list
message GetMotionsRequest {
  string fsm_state = 1;  // optional: filter by FSM state, empty to return all
}

// Complete choreography sequence
message MotionSequence {
  string sequence_id = 1;
  string sequence_name = 2;
  float bpm = 3;                     // beat speed
  repeated Motion motions = 4;       // motion sequence with parameter overrides
  bool loop = 5;                     // whether to loop playback
}

// Request for executing motion sequence
message ExecuteSequenceRequest {
  MotionSequence sequence = 1;
  bool immediate_start = 2;  // whether to start playback immediately
}

// Response for executing motion sequence
message ExecuteSequenceResponse {
  bool success = 1;
  string message = 2;
  string execution_id = 3;  // execution ID for subsequent control
}

// Robot state data
message RobotState {
  repeated float jpos_leg = 1;          // leg joint positions
  repeated float jpos_leg_des = 2;      // desired leg joint positions
  repeated float jvel_leg = 3;          // leg joint velocities
  repeated float jtau_leg = 4;          // leg joint torques
  repeated float jvel_leg_des = 5;      // desired leg joint velocities
  repeated float jtau_leg_des = 6;      // desired leg joint torques
  
  repeated float jpos_arm = 7;          // arm joint positions
  repeated float jvel_arm = 8;          // arm joint velocities
  repeated float jtau_arm = 9;          // arm joint torques
  
  repeated float pos_body = 10;         // body position (x,y,z)
  repeated float vel_body = 11;         // body velocity
  repeated float acc_body = 12;         // body acceleration
  repeated float omega_body = 13;       // body angular velocity
  repeated float ori_body = 14;         // body orientation (roll,pitch,yaw)
  
  repeated float grf_left = 15;         // left foot contact force
  repeated float grf_right = 16;        // right foot contact force
  repeated float grf_vertical_filtered = 17;  // filtered vertical ground reaction force
  
  repeated float temp = 18;             // additional data (forces, battery, etc.)
}

message GetRobotStateRequest {}

message GetRobotStateResponse {
  bool success = 1;
  string message = 2;
  RobotState robot_state = 3;
}

// gRPC service definition

service gRPCService {
  // Motion control interface
  // Get available motion module list
  rpc GetAvailableMotions(GetMotionsRequest) returns (GetMotionsResponse);

  // Execute motion sequence
  rpc ExecuteSequence(ExecuteSequenceRequest) returns (ExecuteSequenceResponse);

  // Get robot state data
  rpc GetRobotState(GetRobotStateRequest) returns (GetRobotStateResponse);
}
